@@ -36,12 +36,17 @@ module ApplicationHelper
   end
 
   #----------------------------------------------------------------------------
-  def link_to_inline(id, url, text = id.to_s.titleize)
-    link_to_remote("<abbr id='#{id}_arrow'>#{ session[id].nil? ? "&#9658;" : "&#9660;" }</abbr> #{text}",
-      :url => url,
+  def link_to_inline(id, url, text = id.to_s.titleize, arrow_id = id)
+    link_to_remote(arrow_for(arrow_id) << "&nbsp;" << text,
+      :url    => url,
       :method => :get,
-      :with => "{ visible: Element.visible('#{id}'), context: '#{id}' }"
+      :with   => "{ visible: Element.visible('#{id}'), context: '#{id}' }"
     )
+  end
+
+  #----------------------------------------------------------------------------
+  def arrow_for(id)
+    content_tag(:abbr, session[id].nil? ? "&#9658;" : "&#9660;", :id => "#{id}_arrow")
   end
 
   #----------------------------------------------------------------------------
