@@ -1,6 +1,5 @@
-# logger.p "edt context: " + @context.inspect
-# logger.p "session: " + session[@context].inspect
 id = dom_id(@lead)
+
 if @context == :edit_lead # Regular inline form called from Leads index.
   if session[@context]
     page[id].replace_html :partial => "edit"
@@ -8,16 +7,21 @@ if @context == :edit_lead # Regular inline form called from Leads index.
   else # Restore <LI> with the original properties and lead info.
     page[id].replace :partial => "lead", :collection => [ @lead ]
   end
+
 else # Inline form called from Lead landing page or somewehere else.
-  if session[@context]
-    page["#{id}_arrow"].replace_html "&#9660;"
+
+  if session[@context] || session[:convert_lead]
+    page[:edit_lead_arrow].replace_html "&#9660;"
+    page[:convert_lead_arrow].replace_html "&#9658;"
     page[dom_id(@lead, :title)].replace_html "Edit #{@lead.full_name}"
     page[id].replace_html :partial => "edit"
-    page[@context].show
-    #page << "Effect.toggle('#{@context}', 'blind', { duration: 0.25, afterFinish: function() { $('lead_first_name').focus(); } });"
+    page[id].hide
+    page << "Effect.toggle('#{id}', 'blind', { duration: 0.25, afterFinish: function() { $('lead_first_name').focus(); } });"
+    session[:convert_lead] = nil
+    session[:edit_lead] = true
   else
-    page["#{id}_arrow"].replace_html "&#9658;"
+    page[:edit_lead_arrow].replace_html "&#9658;"
     page[dom_id(@lead, :title)].replace_html @lead.full_name
-    page << "Effect.toggle('#{@context}', 'blind', { duration: 0.1 });"
+    page << "Effect.toggle('#{id}', 'blind', { duration: 0.1 });"
   end
 end
