@@ -7,6 +7,7 @@ then you win. –- Mahatma Gandhi
 Thu, Mar 5, 2008
 ---------------------------------------------------------------------
 - Moved some JavaScript code from helpers to application.js.
+- Added support for showing interchangeable inline forms (Convert and Edit).
 
 Wed, Mar 4, 2008
 ---------------------------------------------------------------------
